Adding Initial data and parsing it to chunks

--- a/Data Collection.ipynb
+++ b/Data Collection.ipynb
@@ -34,11 +34,137 @@
     "\n",
     "HSR layout and Hebbal are far away so you set up a meeting at Rameshwaram cafe, Indiranagar"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e706ed2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"initial_data.txt\", encoding='utf-8') as f:\n",
+    "    data = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f18d4557",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"intaglobal\\n1,946 posts\\n6,851 followers\\n262 following\\nINTA\\nNonprofit organization\\nThe association of ™ professionals.\\ninta.campsite.bio\\n\\n_anujsinghal\\n1,785 posts\\n681K followers\\n248 following\\nAnuj Singhal\\nDigital creator\\nManaging Editor, CNBC-Awaaz. Most trusted and followed biz anchor in India\\nLet’s talk about finance and life\\nContact: Singhalanuj1010@gmail.com\\nhindi.cnbctv18.com/market-gurukul\\n\\ncode_flare\\n165 posts\\n216 followers\\n10 following\\nThe Journey Notebook | Travel | Food Blogger\\nBlogger\\n📍 Exploring places & phases of life 🌍\\n.\\n🍵 From chai breaks to flight takes ✈️\\n.\\n💫 Travel | Food | Daily life 🌸\\nyoutube.com/@thejourneynotebook?si=Z1lPUAl-cPgHAP_a\\n\\nbangalore_tech_bro\\n402 posts\\n12.5K followers\\n890 following\\nRahul | HSR Hustler\\nEntrepreneur\\n🚀 Building the next Unicorn in Fintech\\n☕ 3rd Wave Coffee addict\\n💻 Python | React | AI\\n📍 HSR Layout, BLR\\nlinktr.ee/rahulbuilds\\n\\nsilkboard_survivor\\n55 posts\\n1,200 followers\\n50 following\\nPriya D.\\nPublic Figure\\n🚦 Stuck in traffic since 2019\\n🌧️ Loving the Bangalore weather, hating the cabs\\n🐍 Data Scientist by day, meme maker by night\\n📍 ORR\\nbit.ly/my-traffic-rants\\n\\nstartuphub_blr\\n2,300 posts\\n45K followers\\n120 following\\nStartup Hub Bangalore\\nMedia\\n🦄 News from the Silicon Valley of India\\n📢 Funding alerts, Hiring trends, and Drama\\n📩 DM for features\\nstartuphub.blr/newsletter\\n\\nfoodie_in_kora\\n890 posts\\n5,600 followers\\n400 following\\nSneha | Bangalore Eats\\nFood & Drink\\nAagrah to Truffles 🍔\\nExploring Koramangala's cafe culture ☕\\nDM for collabs\\nhttps://www.google.com/search?q=zomato.com/users/sneha123\\n\\nventure_vikram\\n120 posts\\n30K followers\\n500 following\\nVikram | Angel Investor\\nInvestor\\n💸 Helping founders go 0 to 1\\nEx-Google, Ex-Amazon\\nInvesting in DeepTech & AI\\n📍 Indiranagar\\nvikram.vc/pitch-deck\\n\\npython_meetup_blr\\n60 posts\\n3,400 followers\\n10 following\\nPyBangalore Community\\nCommunity\\n🐍 Weekly meetups for Pythonistas\\n📍 Cubbon Park | Sundays 4 PM\\nCoding + Coffee + Community\\nhttps://www.google.com/search?q=meetup.com/pybangalore\\n\\nindiranagar_gossip\\n300 posts\\n8,900 followers\\n20 following\\nIndiranagar Spy\\nPersonal Blog\\nNot just about 100ft Road 🤫\\nSpilling tea on the best brunches and worst landlords\\nBengaluru\\nhttps://www.google.com/search?q=medium.com/%40indiranagarspy\\n\\n\\nig_arbin07\\n50 posts\\n33 followers\\n30 following\\naarbinnn\\nGamer\\n@dumb.arbin\\n🎮: Banana『juice (IGL🥷)\\nGamer never die, they just respawn🙂\\u200d↔️\\n\\n\\n\\n7iiuliiu\\n1 post\\n44 followers\\n166 following\\n︎𝐄︎ ♡︎.\\n\\n\\nkatiasales2220\\n107 posts\\n219 followers\\n1,401 following\\nKatia Sales\\nAlfabetização e Reforço Escolar\\nEnsino Fundamental I e II\\nPreparação para Escola Militar\\nPortuguês e Matemática\\nCursando Psicopedagogia Estácio\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "06c088bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['intaglobal\\n1,946 posts\\n6,851 followers\\n262 following\\nINTA\\nNonprofit organization\\nThe association of ™ professionals.\\ninta.campsite.bio',\n",
+       " '_anujsinghal\\n1,785 posts\\n681K followers\\n248 following\\nAnuj Singhal\\nDigital creator\\nManaging Editor, CNBC-Awaaz. Most trusted and followed biz anchor in India\\nLet’s talk about finance and life\\nContact: Singhalanuj1010@gmail.com\\nhindi.cnbctv18.com/market-gurukul',\n",
+       " 'code_flare\\n165 posts\\n216 followers\\n10 following\\nThe Journey Notebook | Travel | Food Blogger\\nBlogger\\n📍 Exploring places & phases of life 🌍\\n.\\n🍵 From chai breaks to flight takes ✈️\\n.\\n💫 Travel | Food | Daily life 🌸\\nyoutube.com/@thejourneynotebook?si=Z1lPUAl-cPgHAP_a',\n",
+       " 'bangalore_tech_bro\\n402 posts\\n12.5K followers\\n890 following\\nRahul | HSR Hustler\\nEntrepreneur\\n🚀 Building the next Unicorn in Fintech\\n☕ 3rd Wave Coffee addict\\n💻 Python | React | AI\\n📍 HSR Layout, BLR\\nlinktr.ee/rahulbuilds',\n",
+       " 'silkboard_survivor\\n55 posts\\n1,200 followers\\n50 following\\nPriya D.\\nPublic Figure\\n🚦 Stuck in traffic since 2019\\n🌧️ Loving the Bangalore weather, hating the cabs\\n🐍 Data Scientist by day, meme maker by night\\n📍 ORR\\nbit.ly/my-traffic-rants',\n",
+       " 'startuphub_blr\\n2,300 posts\\n45K followers\\n120 following\\nStartup Hub Bangalore\\nMedia\\n🦄 News from the Silicon Valley of India\\n📢 Funding alerts, Hiring trends, and Drama\\n📩 DM for features\\nstartuphub.blr/newsletter',\n",
+       " \"foodie_in_kora\\n890 posts\\n5,600 followers\\n400 following\\nSneha | Bangalore Eats\\nFood & Drink\\nAagrah to Truffles 🍔\\nExploring Koramangala's cafe culture ☕\\nDM for collabs\\nhttps://www.google.com/search?q=zomato.com/users/sneha123\",\n",
+       " 'venture_vikram\\n120 posts\\n30K followers\\n500 following\\nVikram | Angel Investor\\nInvestor\\n💸 Helping founders go 0 to 1\\nEx-Google, Ex-Amazon\\nInvesting in DeepTech & AI\\n📍 Indiranagar\\nvikram.vc/pitch-deck',\n",
+       " 'python_meetup_blr\\n60 posts\\n3,400 followers\\n10 following\\nPyBangalore Community\\nCommunity\\n🐍 Weekly meetups for Pythonistas\\n📍 Cubbon Park | Sundays 4 PM\\nCoding + Coffee + Community\\nhttps://www.google.com/search?q=meetup.com/pybangalore',\n",
+       " 'indiranagar_gossip\\n300 posts\\n8,900 followers\\n20 following\\nIndiranagar Spy\\nPersonal Blog\\nNot just about 100ft Road 🤫\\nSpilling tea on the best brunches and worst landlords\\nBengaluru\\nhttps://www.google.com/search?q=medium.com/%40indiranagarspy',\n",
+       " '\\nig_arbin07\\n50 posts\\n33 followers\\n30 following\\naarbinnn\\nGamer\\n@dumb.arbin\\n🎮: Banana『juice (IGL🥷)\\nGamer never die, they just respawn🙂\\u200d↔️',\n",
+       " '7iiuliiu\\n1 post\\n44 followers\\n166 following\\n︎𝐄︎ ♡︎.',\n",
+       " '\\nkatiasales2220\\n107 posts\\n219 followers\\n1,401 following\\nKatia Sales\\nAlfabetização e Reforço Escolar\\nEnsino Fundamental I e II\\nPreparação para Escola Militar\\nPortuguês e Matemática\\nCursando Psicopedagogia Estácio']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chunks = data.split(\"\\n\\n\") \n",
+    "chunks = [c for c in chunks if len(c)>3]\n",
+    "chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6a8dc2fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'silkboard_survivor\\n55 posts\\n1,200 followers\\n50 following\\nPriya D.\\nPublic Figure\\n🚦 Stuck in traffic since 2019\\n🌧️ Loving the Bangalore weather, hating the cabs\\n🐍 Data Scientist by day, meme maker by night\\n📍 ORR\\nbit.ly/my-traffic-rants'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chunks[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "910c14f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'username': 'intaglobal', 'no_of_posts': '1,946 posts', 'no_of_followers': '6,851 followers', 'no_of_following': '262 following', 'name': 'INTA', 'type_of_page': 'Nonprofit organization', 'bio': 'The association of ™ professionals.\\ninta.campsite.bio'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def parse_chunk(chunk): \n",
+    "        chunk = chunk.strip()\n",
+    "        sep_chunk = chunk.split('\\n')\n",
+    "        username = sep_chunk[0]\n",
+    "        no_of_posts = sep_chunk[1]\n",
+    "        no_of_followers = sep_chunk[2]\n",
+    "        no_of_following = sep_chunk[3]\n",
+    "        name = sep_chunk[4]\n",
+    "        if(len(sep_chunk)> 5):\n",
+    "            type_of_page = sep_chunk[5]\n",
+    "            bio = \"\\n\".join(sep_chunk[6:])\n",
+    "        else:\n",
+    "            type_of_page = \"Unknown\"\n",
+    "            bio = \"\"\n",
+    "        # print(username, no_of_posts, no_of_followers, no_of_following, name, type_of_page, bio, sep=\"\\n\")\n",
+    "        return {\"username\": username, \"no_of_posts\": no_of_posts, \"no_of_followers\": no_of_followers, \n",
+    "                \"no_of_following\": no_of_following, \"name\": name, \"type_of_page\": type_of_page, \"bio\": bio}\n",
+    "\n",
+    "    \n",
+    "print(parse_chunk(chunks[0]))\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "aryanenv",
    "language": "python",
    "name": "python3"
   },
@@ -52,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
